# dice-chess-engine

./: CMakeLists.txt  board.cpp  board.hpp  cmake-generate.sh  main.cpp  monte-carlo.cpp  output_operators.hpp  splitmix.hpp
unit-tests/: dice_test.cpp  move_generation_test.cpp  test_utils.cpp  test_utils.hpp
