project(dice_chess)
set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -Wall -Wshadow -Wextra -O0")
add_executable(main main.cpp board.cpp)
add_executable(move_generation_test unit-tests/move_generation_test.cpp unit-tests/test_utils.cpp board.cpp)
add_executable(monte-carlo monte-carlo.cpp board.cpp)
